# rebind

./: .gitignore  DESIGN.md  Makefile  README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  config.rs  foreground.rs  hook.rs  input.rs  lib.rs  main.rs  tray.rs
ui/: index.html
