[package]
name = "rebind"
version = "0.1.0"
description = "Windows tray resident Emacs-like keybinding remapper"
authors = ["thirai"]
edition = "2024"
license = "MIT"

[lib]
name = "rebind_lib"
crate-type = ["rlib"]

[[bin]]
name = "rebind"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
arc-swap = "1.7.1"
open = "5.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tauri = { version = "2.10.3", features = ["tray-icon"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
